[package]
name = "the_salvager"
version = "0.1.0"
authors = ["stephan svoboda<stephan@svoboda.or.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { Version = "0.8.1"}
specs = "0.16.1"
specs-derive = "0.4.1"