[package]
name = "the_salvager"
version = "0.1.0"
authors = ["stephan svoboda<stephan@svoboda.or.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { git = "https://github.com/amethyst/bracket-lib", features = ["serde"]}
specs = {Version = "0.16.1", features = ["serde"]}
specs-derive = "0.4.1"
serde= { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"